Added new GameData folder in engine, starting to convert factories to read XML files

--- a/Engine/Engine.csproj
+++ b/Engine/Engine.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="GameData\GameItems.xml" />
     <None Remove="Images\Locations\FarmFields.png" />
     <None Remove="Images\Locations\Farmhouse.png" />
     <None Remove="Images\Locations\HerbalistsGarden.png" />
@@ -19,6 +20,12 @@
     <None Remove="Images\Monsters\GiantSpider.png" />
     <None Remove="Images\Monsters\Rat.png" />
     <None Remove="Images\Monsters\Snake.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="GameData\GameItems.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
   <ItemGroup>
