--- a/Engine/Engine.csproj
+++ b/Engine/Engine.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <None Remove="GameData\GameItems.xml" />
+    <None Remove="GameData\Locations.xml" />
     <None Remove="Images\Locations\FarmFields.png" />
     <None Remove="Images\Locations\Farmhouse.png" />
     <None Remove="Images\Locations\HerbalistsGarden.png" />
@@ -24,6 +25,9 @@
 
   <ItemGroup>
     <Content Include="GameData\GameItems.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="GameData\Locations.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
