--- a/Engine/Engine.csproj
+++ b/Engine/Engine.csproj
@@ -25,6 +25,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Update="GameData\Quests.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
