--- a/Engine/Engine.csproj
+++ b/Engine/Engine.csproj
@@ -7,12 +7,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="GameData\GameDetails.json" />
     <None Remove="GameData\GameItems.xml" />
     <None Remove="GameData\Locations.xml" />
     <None Remove="GameData\Monsters.xml" />
   </ItemGroup>
 
   <ItemGroup>
+    <Content Include="GameData\GameDetails.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="GameData\GameItems.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
